# trivialsec-trivialscan-lambda

./: .autoenv.zsh  .dockerignore  .env  .env-example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .sourcery.yaml  Dockerfile  Dockerfile-runner  Makefile  README.md  openapi.code-workspace  openapi.json  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.py  trivialscan-lambda.code-workspace
.ci/: build_yaml_descriptions.py
.development/: build_md_descriptions.py  build_yaml_descriptions.py  client-identifiers.json
plans/: Dev-backend.conf  Prod-backend.conf  _locals.tf  _secrets.tf  _vars.tf  cloudfront.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  parameters.tf  remotes.tf  route53.tf
plans/policy/: trivialscan_role_policy.json
src/: app.py  internals.py  models.py  router.py  utils.py
src/config/: __init__.py  mitre_attack_11.2.yaml  pci_dss_3.2.1.yaml  pci_dss_4.0.yaml  rule_desc.yaml  sets.py
src/config/pci_dss/3.2.1/: requirement_1.1.md  requirement_1.2.md  requirement_1.3.md  requirement_1.4.md  requirement_1.5.md  requirement_1.md  requirement_10.1.md  requirement_10.2.md  requirement_10.3.md  requirement_10.4.md  requirement_10.5.md  requirement_10.6.md  requirement_10.7.md  requirement_10.8.md  requirement_10.9.md  requirement_10.md  requirement_11.1.md  requirement_11.2.md  requirement_11.3.md  requirement_11.4.md  requirement_11.5.md  requirement_11.6.md  requirement_11.md  requirement_12.1.md  requirement_12.10.md  requirement_12.11.md  requirement_12.2.md  requirement_12.3.md  requirement_12.4.md  requirement_12.5.md  requirement_12.6.md  requirement_12.7.md  requirement_12.8.md  requirement_12.9.md  requirement_12.md  requirement_2.1.md  requirement_2.2.md  requirement_2.3.md  requirement_2.4.md  requirement_2.5.md  (+73 more)
src/config/pci_dss/4.0/: requirement_1.1.1.md  requirement_1.md  (+339 more)
src/config/rules/: issue_1.1.md  issue_1.11.md  issue_1.12.md  issue_1.13.md  issue_1.14.md  issue_1.15.md  issue_1.16.md  issue_1.17.md  issue_1.18.md  issue_1.19.md  issue_1.2.md  issue_1.20.md  issue_1.21.md  issue_1.22.md  issue_1.23.md  issue_1.25.md  issue_1.26.md  issue_1.27.md  issue_1.3.md  issue_1.4.md  issue_1.5.md  issue_1.6.md  issue_1.7.md  issue_1.8.md  issue_1.9.md  issue_2.1.md  issue_2.10.md  issue_2.11.md  issue_2.12.md  issue_2.13.md  issue_2.15.md  issue_2.16.md  issue_2.17.md  issue_2.18.md  issue_2.19.md  issue_2.2.md  issue_2.20.md  issue_2.21.md  issue_2.22.md  issue_2.23.md  (+52 more)
src/models/: __init__.py  stripe.py
src/routers/: account.py  certificate.py  client.py  dashboard.py  host.py  member.py  report.py  scanner.py  search.py  sendgrid.py  stripe.py
src/services/: aws.py  helpers.py  sendgrid.py  stripe.py  webhook.py
(+668 files in other folders)
